commit landing page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,5 +9,22 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="./src/assets/js/vendor/jquery-3.5.0.min.js"></script>
+    <script src="./src/assets/js/popper.min.js"></script>
+    <script src="./src/assets/js/bootstrap.min.js"></script>
+    <script src="./src/assets/js/isotope.pkgd.min.js"></script>
+    <script src="./src/assets/js/imagesloaded.pkgd.min.js"></script>
+    <script src="./src/assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="./src/assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="./src/assets/js/bootstrap-datepicker.min.js"></script>
+    <script src="./src/assets/js/jquery.nice-select.min.js"></script>
+    <script src="./src/assets/js/jquery.countdown.min.js"></script>
+    <script src="./src/assets/js/swiper-bundle.min.js"></script>
+    <script src="./src/assets/js/jarallax.min.js"></script>
+    <script src="./src/assets/js/slick.min.js"></script>
+    <script src="./src/assets/js/wow.min.js"></script>
+    <script src="./src/assets/js/nav-tool.js"></script>
+    <script src="./src/assets/js/plugins.js"></script>
+    <script src="./src/assets/js/main.js"></script>
   </body>
 </html>
